--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div class="rewind"></div>
 
    <div class="player">
      <video class="player__video viewer" src="download.mp4"></video>
